--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     font-weight: bold;
     margin:0px;
     padding: 50px 0;
+    color: #fd8a06;
     
 
 }
@@ -107,6 +108,10 @@
     gap: 25px;
 }
 
+.feature-img-container img{
+    width: 100%;
+}
+
 .feature-tittle{
     font-size: 3rem;
     margin: 24px 0;
@@ -122,14 +127,69 @@
     color: #727272;
     font-size: 1rem;
     margin-bottom: 2rem;
+    max-width: 560px;
 }
 
+/* feature details styles */
 
+.feature-option{
+    display: flex;
+    gap: 140px;
+    max-width: 1440px;
+    margin: 100px auto;
+    align-items: center;
+    
+}
 
+.feature-head{
+    font-size: 2.8rem;
+    font-weight: bold;
+    width: 400px;
+    border-left: 5px solid #FF900E;
+    padding-left: 25px;
+    margin: 0;
+}
 
+.feature-card{
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    width: auto;
+    padding: 30px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.sister-img-container img{
+    width: 100%;
+}
+.card-tittle{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0;
+}
+.card-des{
+    font-size: 16px;
+    color: #727272;
+}
+#amazing-year{
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 0;
 
+}
+#amazing-experience{
+    font-size: 1.5rem;
+    font-weight: 550;
+    margin: 0;
+}
+.btn-experience{
+    background-color: #FF900E;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding:40px 40px;
+    margin-top: -120px;
+    margin-left: -100px;
 
-
+}
 
 
 
@@ -144,6 +204,12 @@
         flex-direction: column;
         /* justify-content: center; */
     }
+    
+    .feature{
+        padding: 30px;
+        gap: 30px;
+        max-width: 80vmax;
+    }
 
     .company-tittle{
         padding: 20px 0;
@@ -152,10 +218,6 @@
         text-align: center;
         gap: 1.2rem;
         padding: 0;
-    }
-    .feature{
-        padding: 20px;
-        gap: 30px;
     }
 
     .feature-img-container{
@@ -168,8 +230,29 @@
     .feature-tittle{
         font-size: 2.5rem;
     }
+    .banner-tittle{
+        /* padding: 10px; */
+        font-size: 3rem;
+    }
+    .feature-head{
+        width: auto;
+    }
 
+    .feature-option{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .btn-experience{
+        padding: 20PX;
+        margin: -50px 0;
 
+    }
+    #amazing-year{
+        font-size: 2rem;
+    }
+    #amazing-experience{
+        font-size: 1rem;
+    }
 
 
 }
@@ -183,10 +266,30 @@
     .feature{
         max-width: 80vmax;
         margin: 0 auto;
+        align-items: normal;
         flex-direction: column;
         gap: 50px;
     }
-
+    .feature-option{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .feature-head{
+        margin-left: 20px;
+    }
+    .btn-experience{
+        padding: 40px;
+        margin: -60px 0;
+    }
+    #amazing-year{
+        font-size: 2.5rem;
+    }
+    #amazing-experience{
+        font-size: 1.3rem;
+    }
+    .feature-des{
+        padding: 10px;
+    }
    
     
 }
